[gd_scene load_steps=29 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/feuille.png" type="Texture" id=2]
[ext_resource path="res://Menu/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://HUD/font/riffic.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/tuto_keys.png" type="Texture" id=5]
[ext_resource path="res://Assets/tuto_mouse.png" type="Texture" id=6]
[ext_resource path="res://Assets/heros_couleur.png" type="Texture" id=7]
[ext_resource path="res://Assets/heros_corps.png" type="Texture" id=8]
[ext_resource path="res://Assets/heros_face.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="DynamicFont" id=17]
size = 72
outline_size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=18]
size = 120
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=19]
resource_name = "texte_gros_pas_gros"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Menu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="feuille" type="Sprite" parent="."]
position = Vector2( 512.889, 732.526 )
scale = Vector2( 0.676973, 0.715945 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.113725, 0.137255, 0.32549, 1 )
custom_colors/font_color_hover = Color( 1, 0.717647, 0, 1 )
text = "New game"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 76.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.717647, 0, 1 )
text = "Turorial"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 150 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.113725, 0.137255, 0.32549, 1 )
custom_colors/font_color_hover = Color( 1, 0.717647, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"

[node name="TutorialPanel" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Background" type="TextureRect" parent="TutorialPanel"]
margin_right = 1514.0
margin_bottom = 2048.0
rect_scale = Vector2( 0.68, 0.4 )
texture = ExtResource( 2 )

[node name="Keys" type="TextureRect" parent="TutorialPanel"]
margin_left = 653.684
margin_top = 125.263
margin_right = 956.684
margin_bottom = 264.263
texture = ExtResource( 5 )

[node name="Mouse" type="TextureRect" parent="TutorialPanel"]
margin_left = 734.737
margin_top = 314.737
margin_right = 887.737
margin_bottom = 564.737
texture = ExtResource( 6 )

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2( 248.098, 58.8075 )

[node name="Label" type="Label" parent="Node2D2"]
margin_right = 544.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0.647059, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "CHRO"

[node name="Label2" type="Label" parent="Node2D2"]
margin_left = 208.777
margin_right = 752.777
margin_bottom = 77.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "MAT"

[node name="Label3" type="Label" parent="Node2D2"]
margin_left = 386.062
margin_top = -1.16635
margin_right = 930.062
margin_bottom = 75.8336
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.411765, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "IQUE"

[node name="Node2D" type="Node2D" parent="Node2D2"]
position = Vector2( 503.134, 84.8302 )
rotation = -0.307287
scale = Vector2( 0.962342, 0.962342 )

[node name="Label4" type="Label" parent="Node2D2/Node2D"]
margin_left = -157.636
margin_top = -62.5525
margin_right = 156.364
margin_bottom = 64.4475
rect_rotation = 1.13601
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fever"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D2"]
autoplay = "texte_gros_pas_gros"
anims/texte_gros_pas_gros = SubResource( 19 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 792.243, 301.837 )
scale = Vector2( 0.638416, 0.638416 )

[node name="heros_couleur" type="Sprite" parent="Node2D"]
modulate = Color( 0, 0.6, 1, 1 )
position = Vector2( 0.931274, -0.0709991 )
scale = Vector2( 1.0191, 1 )
texture = ExtResource( 7 )

[node name="heros_corps" type="Sprite" parent="Node2D"]
position = Vector2( 12.2433, 62.5772 )
texture = ExtResource( 8 )

[node name="heros_face" type="Sprite" parent="Node2D"]
position = Vector2( -9.93994, -74.156 )
texture = ExtResource( 9 )
